--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "knex": "^0.20.13",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
     "socket.io": "^2.3.0",
     "sqlite3": "^4.1.1"
