Parte administrativa do FrontEnd refatorada

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,9 +1,9 @@
 
 APP_NAME = Portifolium
   
-REACT_APP_REST_API_LOCATION=http://localhost:3333
+REACT_APP_REST_API_LOCATION=http://192.168.1.125:3333
 
-REACT_APP_STATIC_URL = 'http://localhost:3333/uploads'
+REACT_APP_STATIC_URL = 'http://192.168.1.125:3333/uploads'
 
 
 
