--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-transition-group": "^4.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
